<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    tools:context=".homeActivity"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">

    <com.google.android.material.navigation.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:id="@+id/nav_view"
        app:headerLayout="@layout/header"
        app:menu="@menu/main_menu"
        android:layout_gravity="start">

    </com.google.android.material.navigation.NavigationView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/Btn_home_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="70dp"
            android:background="@drawable/layout_bg"
            android:text="BACK"
            android:textColor="@color/black"
            app:backgroundTint="@color/white" />

        <Button
            android:id="@+id/ETA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="150dp"
            android:background="@drawable/layout_bg"
            android:text="eta"
            app:backgroundTint="#fabc3d" />


        <Button
            android:id="@+id/Btn_home_range_1000"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight ="10dp"
            android:layout_marginTop="70dp"
            android:background="@drawable/layout_bg"
            android:text="1000ft"
            app:backgroundTint="@color/white"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/Btn_home_range_2000"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/Btn_home_range_1000"
            android:layout_alignParentRight="true"
            android:layout_marginRight ="10dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/layout_bg"
            android:textColor="@color/black"
            android:text="2000ft"
            app:backgroundTint="@color/white" />

        <Button
            android:id="@+id/Btn_home_range_3000"
            android:layout_width="wrap_content"
            android:layout_below="@+id/Btn_home_range_2000"
            android:layout_alignParentRight="true"
            android:layout_height="wrap_content"
            android:layout_marginRight ="10dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/layout_bg"
            android:text="3000ft"
            android:textColor="@color/black"
            app:backgroundTint="@color/white" />

        <ImageButton
            android:id="@+id/imgBtn_gps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/Btn_home_range_3000"
            android:layout_alignParentRight="true"
            android:layout_marginTop="40dp"
            android:layout_marginRight ="0dp"
            app:srcCompat="@drawable/ic_baseline_gps_24"
            android:backgroundTint="@color/white"
            app:tint="@color/quantum_greyblack1000" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_end_route"
            android:text="I'm arrived"
            android:layout_marginLeft="10dp"
            android:layout_below="@+id/ETA"
            android:layout_marginTop="5dp"
            android:textColor="@color/black"
            android:backgroundTint="@color/white"
            android:fontFamily="@font/allan_bold"
            />



        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/white"
            app:titleTextColor="@color/black"
            android:theme="?attr/actionBarTheme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:navigationIcon="@drawable/ic_baseline_menu_48"
            />
        <!-- TODO: try change the icon to something more obvious -->

        <androidx.fragment.app.FragmentContainerView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/home_map_view"
            android:name="com.google.android.gms.maps.SupportMapFragment" />


    </RelativeLayout>



</androidx.drawerlayout.widget.DrawerLayout>