...
            <TextView
                android:id="@+id/history_tv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="300px"
                android:layout_marginTop="80px"
                android:text="History"
                android:textColor="#fff" />

            <TextView
                android:id="@+id/history_tv_other"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...
                android:textColor="#fff" />

        </RelativeLayout>


        <ListView
            android:id="@+id/history_lv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/history_rl_head"
            android:listSelector="@android:color/transparent" />

        <androidx.appcompat.widget.Toolbar
...
