...
        android:paddingBottom="20sp"
        android:textColor="@color/black"
        android:text="Welcome to SoCalBeach"
        android:textSize="34sp" />

    <TextView
        android:id="@+id/tv_signin_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/allerta"
        android:textColor="#CA0000" />

...
